# ccmc-software

./: GlobalCCMCAttributeNames.xml  KameleonSoftwareSuite.md  MAS.xml  ProjectHome.md  README.md  enlil.xml  libcdfNativeLibrary.jnilib
Kameleon-Interpolator/: AUTHORS  ChangeLog  configure.ac
Kameleon-Interpolator/doc/: Doxyfile
Kameleon-Interpolator/src/: Makefile.am
Kameleon-Interpolator/src/ccmc/: BATSRUS.cpp  BATSRUS.h  BATSRUSInterpolator.cpp  CTIP.cpp  CTIP.h  Constants.h  ENLIL.cpp  ENLIL.h  ENLILInterpolator.cpp  ENLILInterpolator.h  Fieldline.cpp  FileReader.cpp  FileReader.h  FileReader_compatibility.cpp  FileReader_compatibility.h  Interpolator.cpp  Interpolator.h  Kameleon-Tracer.cpp  Kameleon.cpp  Kameleon.h  KameleonInterpolator.cpp  KameleonInterpolator.h  KameleonInterpolator_compute_e.cpp  KameleonInterpolator_compute_edotj.cpp  KameleonInterpolator_compute_en.cpp  KameleonInterpolator_compute_exb.cpp  KameleonInterpolator_compute_jpar.cpp  KameleonInterpolator_compute_magnitude.cpp  KameleonInterpolator_compute_nv.cpp  KameleonInterpolator_compute_pram.cpp  KameleonInterpolator_compute_temp.cpp  KameleonInterpolator_initializeCalculationMethods.cpp  KameleonInterpolator_interpolateSimple.cpp  Kameleon_compatibility.cpp  Kameleon_compatibility.h  Kameleon_compute_etaj.cpp  Kameleon_compute_exb.cpp  Kameleon_compute_n.cpp  Kameleon_initializeConversionFactorsToVis.cpp  Kameleon_initializeListOfRequiredVariablesForComponentsAndVectors.cpp  (+9 more)
Kameleon-Interpolator/src/cxform/: Makefile.am
Kameleon-Interpolator/src/example/: FileReader_compatibility_test.c  FileReader_compatibility_test_f.f  Makefile.am  coordinate_transformation_test.cpp  derived_prog.cpp  tracer_dipole_prog.cpp
Kameleon-Interpolator/src/example/c/: Kameleon_compatibility_test.c
Kameleon-Interpolator/src/example/c++/: Makefile.am  coordinate_transformation_test.cpp  derived_prog.cpp  enlil_test.cpp
Kameleon-Interpolator/src/wrappers/java/: Makefile.am  SWIGTYPE_p_boost__unordered_mapT_int_ccmc__Kameleon_p_t.java  vector_point3f.java
Kameleon_Pro/src/ccmc/: BATSRUS.h  BATSRUSInterpolator.h  Cell3D.h  ENLIL.cpp  ENLIL.h  FileReader.cpp  Kameleon.cpp  Kameleon.h  KameleonInterpolator.cpp  KameleonInterpolator_initializeCalculationMethods.cpp  KameleonInterpolator_interpolate.cpp  KameleonInterpolator_interpolateSimple.cpp  Kameleon_compatibility.cpp  Kameleon_compatibility.h  Kameleon_compute_beta.cpp  Kameleon_compute_e.cpp  Kameleon_compute_edotj.cpp  Kameleon_compute_en.cpp  Kameleon_compute_jxb.cpp  Kameleon_compute_n.cpp  Kameleon_compute_nv.cpp  Kameleon_compute_polb.cpp  Kameleon_compute_pram.cpp  Kameleon_compute_s.cpp  Kameleon_initializeConversionFactorsToVis.cpp  Kameleon_initializeUnits.cpp  Kameleon_open.cpp  MAS.cpp  MAS.h  MASInterpolator.h  Makefile.am  Makefile.in  Model.cpp  OpenGGCM.cpp  OpenGGCM.h  OpenGGCMInterpolator.cpp  OpenGGCMInterpolator.h  Point.h  Shue.h  Utils.h
Kameleon_Pro/src/example/: Kameleon_compatibility_test.c  Makefile.am
kameleon-plus/src/ccmc/: Adapt3D.cpp  Adapt3D.h  Adapt3DInterpolator.cpp  Adapt3DInterpolator.h  Attribute.h  BATSRUS.cpp  BATSRUS.h  BATSRUSInterpolator.cpp  BATSRUSInterpolator.h  CCMCTime.cpp  CDFFileReader.cpp  CDFFileReader.h  Constants.h  ENLIL.cpp  ENLIL.h  ENLILInterpolator.cpp  Fieldline.cpp  Fieldline.h  FileReader.cpp  FileReader.h  GeneralFileReader.cpp  GeneralFileReader.h  HDF5FileReader.cpp  HDF5FileReader.h  Interpolator.cpp  Kameleon-Tracer.cpp  Kameleon-Tracer.h  Kameleon.cpp  Kameleon.h  KameleonInterpolator.cpp  KameleonInterpolator.h  KameleonInterpolator_compute_e.cpp  KameleonInterpolator_compute_edotj.cpp  KameleonInterpolator_compute_gradient.cpp  KameleonInterpolator_compute_magnitude.cpp  KameleonInterpolator_compute_n.cpp  KameleonInterpolator_compute_pram.cpp  KameleonInterpolator_compute_s.cpp  KameleonInterpolator_compute_scaleByRadius.cpp  KameleonInterpolator_interpolateSimple.cpp  (+43 more)
kameleon-plus/src/ccmc/variables/: Makefile.am  Variable.cpp  Variable.h
kameleon-plus/src/ccmc/wrappers/: Makefile.am  ccmc.i
kameleon-plus/src/example/: Makefile.am
kameleon-plus/src/example/c/: FileReader_compatibility_test.c  Makefile.am
kameleon-plus/src/example/c++/: CDFReader.cpp  Makefile.am  adapt3d_test.cpp  enlil_test.cpp  integrator_prog.cpp  kameleon_prog.cpp  lfm_test.cpp  minmax_prog.cpp  tracer_prog.cpp
kameleon-plus/src/example/fortran/: Kameleon_compatibility_test_f.f  Makefile.am
kameleon-plus/src/example/python/: integrator.py
kameleon-plus/trunk/kameleon-plus-working/: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Kameleon-Anaconda.ipynb  NEWS  README  README.md  kameleon-plus-Config.h.in
kameleon-plus/trunk/kameleon-plus-working/doc/: Doxyfile  README
kameleon-plus/trunk/kameleon-plus-working/docs/: Makefile  README
kameleon-plus/trunk/kameleon-plus-working/ext/: FindCDF.cmake
kameleon-plus/trunk/kameleon-plus-working/utils/: Model_units.md  lfm_split.py
kameleon_PLUS_interpolator/Kameleon-Interpolator/: AUTHORS  COPYING  ChangeLog  configure.ac
kameleon_PLUS_interpolator/Kameleon-Interpolator/src/: Makefile.am
kameleon_PLUS_interpolator/Kameleon-Interpolator/src/ccmc/: Attribute.cpp  BATSRUS.cpp  BATSRUS.h  BATSRUSInterpolator.cpp  BATSRUSInterpolator.h  CTIP.cpp  CTIP.h  Constants.h  ENLIL.cpp  ENLIL.h  ENLILInterpolator.cpp  ENLILInterpolator.h  FileReader.cpp  FileReader.h  FileReader_compatibility.cpp  FileReader_compatibility.h  Interpolator.cpp  Kameleon-Tracer.h  Kameleon.cpp  Kameleon.h  KameleonInterpolator.cpp  KameleonInterpolator.h  KameleonInterpolator_compute_etaj.cpp  KameleonInterpolator_compute_jxb.cpp  KameleonInterpolator_compute_magnitude.cpp  KameleonInterpolator_compute_nv.cpp  KameleonInterpolator_interpolateSimple.cpp  Kameleon_compatibility.cpp  (+22 more)
kameleon_PLUS_interpolator/Kameleon_Pro/: ChangeLog  Makefile.in  config.h.in  configure.ac
kameleon_PLUS_interpolator/kameleon-plus/: ChangeLog  Makefile.am  configure.ac
kameleon_PLUS_interpolator/kameleon-plus/doc/: Doxyfile
kameleon_PLUS_interpolator/kameleon-plus/src/: Makefile.am
(+4707 files in other folders)
