if ENABLE_C
	C_WRAPPERS = c
else
	C_WRAPPERS = 
endif

if ENABLE_FORTRAN
	FORTRAN_WRAPPERS = fortran
else
	FORTRAN_WRAPPERS =
endif

if ENABLE_JAVA
	JAVA_WRAPPERS = java
else
	JAVA_WRAPPERS =
endif

if ENABLE_PYTHON
	PYTHON_WRAPPERS = python
else
	PYTHON_WRAPPERS =
endif

SUBDIRS = c++ $(C_WRAPPERS) $(FORTRAN_WRAPPERS) # $(JAVA_WRAPPER) $(PYTHON_WRAPPER) 
DIST_SUBDIRS = c++ c fortran #java python





